--- a/style.css
+++ b/style.css
@@ -2462,6 +2462,14 @@ body.single-post .category-section h3 {
   letter-spacing: 1px;
 }
 
+@media screen and (max-width: 1366px) {
+  body.page-template-page-blog .category-section h3,
+  body.single-post .category-section h3 {
+    margin: 0;
+    margin-left: 4vw;
+  }
+}
+
 body.page-template-page-blog .cat-container,
 body.single-post .cat-container {
   max-width: 1300px;
@@ -2473,6 +2481,29 @@ body.single-post .cat-container {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+@media screen and (max-width: 1300px) {
+  body.page-template-page-blog .cat-container,
+  body.single-post .cat-container {
+    margin-right: 4vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body.page-template-page-blog .cat-container,
+  body.single-post .cat-container {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    height: 176px;
+    margin-left: 4vw;
+  }
+  body.page-template-page-blog .cat-container .cat-asd,
+  body.single-post .cat-container .cat-asd {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 50%;
+            flex: 1 0 50%;
+  }
 }
 
 body.page-template-page-blog .category-text,
@@ -2490,6 +2521,15 @@ body.single-post .category-text {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+  body.page-template-page-blog .category-text,
+  body.single-post .category-text {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 100%;
+            flex: 1 0 100%;
+  }
 }
 
 body.page-template-page-blog .category-text h3:before,
@@ -2570,10 +2610,6 @@ body.single-post .category-list .cat-item p::after {
   height: 1px;
   background-color: black;
   z-index: 3;
-  -webkit-transition: all 320ms;
-  transition: all 320ms;
-  -webkit-transition-delay: 80ms;
-          transition-delay: 80ms;
 }
 
 body.page-template-page-blog .category-list .cat-item:hover, body.page-template-page-blog .category-list .cat-item.active,
@@ -2604,6 +2640,10 @@ body.single-post .category-list .cat-item:hover p::after,
 body.single-post .category-list .cat-item.active p::after {
   left: 25%;
   right: 25%;
+  -webkit-transition: all 320ms;
+  transition: all 320ms;
+  -webkit-transition-delay: 80ms;
+          transition-delay: 80ms;
 }
 
 body.page-template-page-blog .arrow,
@@ -2774,6 +2814,16 @@ body.single-post .category-search-text-2 {
   text-transform: uppercase;
   font-weight: 500;
   display: none;
+  line-height: 1.2em;
+}
+
+@media screen and (max-width: 1366px) {
+  body.page-template-page-blog .category-search-text,
+  body.page-template-page-blog .category-search-text-2,
+  body.single-post .category-search-text,
+  body.single-post .category-search-text-2 {
+    max-width: 90vw;
+  }
 }
 
 body.page-template-page-blog .category-search-text,
@@ -2795,6 +2845,13 @@ body.single-post .latest-post-list {
   max-width: 1300px;
 }
 
+@media screen and (max-width: 1366px) {
+  body.page-template-page-blog .latest-post-list,
+  body.single-post .latest-post-list {
+    max-width: 90vw;
+  }
+}
+
 body.page-template-page-blog .latest-post-list .latest-text,
 body.single-post .latest-post-list .latest-text {
   margin: 0;
@@ -2803,6 +2860,7 @@ body.single-post .latest-post-list .latest-text {
   font-weight: 500;
   letter-spacing: 1px;
   color: rgba(33, 34, 33, 0.92);
+  line-height: 1.2em;
 }
 
 body.page-template-page-blog .latest-post-list .latest-text-2,
@@ -2813,6 +2871,7 @@ body.single-post .latest-post-list .latest-text-2 {
   font-size: 48px;
   letter-spacing: 0.05em;
   text-transform: uppercase;
+  line-height: 1.2em;
 }
 
 body.page-template-page-blog .latest-post-list .title-cont,
@@ -2865,6 +2924,16 @@ body.single-post .latest-post-list .post-cont {
   cursor: pointer;
 }
 
+@media screen and (max-width: 1200px) {
+  body.page-template-page-blog .latest-post-list .post-cont,
+  body.single-post .latest-post-list .post-cont {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    height: auto;
+    max-height: initial;
+  }
+}
+
 body.page-template-page-blog .latest-post-list .post-cont.hovered,
 body.single-post .latest-post-list .post-cont.hovered {
   color: white;
@@ -2902,6 +2971,13 @@ body.single-post .latest-post-list .post-cont-bg {
   z-index: 1;
 }
 
+@media screen and (max-width: 1200px) {
+  body.page-template-page-blog .latest-post-list .post-cont-bg,
+  body.single-post .latest-post-list .post-cont-bg {
+    left: 0;
+  }
+}
+
 body.page-template-page-blog .latest-post-list .post-thumbnail,
 body.single-post .latest-post-list .post-thumbnail {
   -webkit-box-flex: 1;
@@ -2923,6 +2999,13 @@ body.single-post .latest-post-list .post-thumbnail .bg-image {
   background-repeat: no-repeat;
 }
 
+@media screen and (max-width: 1200px) {
+  body.page-template-page-blog .latest-post-list .post-thumbnail .bg-image,
+  body.single-post .latest-post-list .post-thumbnail .bg-image {
+    height: 40vw;
+  }
+}
+
 body.page-template-page-blog .latest-post-list .post-text,
 body.single-post .latest-post-list .post-text {
   padding: 35px;
@@ -2936,7 +3019,6 @@ body.single-post .latest-post-list .post-text {
 
 body.page-template-page-blog .latest-post-list .excerpt,
 body.single-post .latest-post-list .excerpt {
-  margin-top: 50px;
   -ms-flex-item-align: end;
       align-self: flex-end;
 }
@@ -3018,7 +3100,7 @@ body.single-post footer h1 {
 
 body.page-template-page-blog main,
 body.single-post main {
-  margin: 88px 0 0 0;
+  margin: 88px 0 0 0 !important;
   padding-bottom: 128px;
 }
 
@@ -3325,6 +3407,12 @@ body.single-post .slider-list {
     margin: 0;
     max-width: 100%;
   }
+  body.page-template-page-blog .latest-post-list .latest-text-2,
+  body.page-template-page-blog .latest-post-list .category-search-text-2,
+  body.single-post .latest-post-list .latest-text-2,
+  body.single-post .latest-post-list .category-search-text-2 {
+    font-size: 36px;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -3366,6 +3454,21 @@ body.single-post .slider-list {
   body.page-template-page-blog .latest-post-list .title-cont h3,
   body.single-post .latest-post-list .title-cont h3 {
     font-size: 18px;
+  }
+  body.page-template-page-blog .latest-post-list .latest-text-2,
+  body.page-template-page-blog .latest-post-list .category-search-text-2,
+  body.single-post .latest-post-list .latest-text-2,
+  body.single-post .latest-post-list .category-search-text-2 {
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  body.page-template-page-blog .latest-post-list .latest-text-2,
+  body.page-template-page-blog .latest-post-list .category-search-text-2,
+  body.single-post .latest-post-list .latest-text-2,
+  body.single-post .latest-post-list .category-search-text-2 {
+    font-size: 26px;
   }
 }
 
